# kodegen-tools-browser

./: Cargo.toml  README.md  config.yaml
examples/: browser_demo.rs  test_browser_agent.rs
examples/common/: mod.rs
src/: browser_setup.rs  lib.rs  main.rs  manager.rs
src/agent/: core.rs  mod.rs  prompts.rs  registry.rs  session.rs  views.rs
src/agent/core/: action_executor.rs  agent.rs  browser_state.rs  config.rs  llm_integration.rs  messaging.rs  mod.rs  processor.rs
src/browser/: mod.rs  wrapper.rs
src/page_extractor/: extractors.rs  mod.rs  page_info.rs
src/research/: mod.rs  registry.rs  session.rs  session_manager.rs
src/tools/: browser_agent.rs  browser_get_research_result.rs  browser_get_research_status.rs  browser_list_research_sessions.rs  browser_research.rs  browser_start_research.rs  browser_stop_research.rs  browser_web_search.rs  click.rs  extract_text.rs  get_research_result.rs  get_research_status.rs  list_research_sessions.rs  mod.rs  navigate.rs  screenshot.rs  scroll.rs  start_browser_research.rs  stop_browser_research.rs  type_text.rs  web_search.rs
src/utils/: agent_state.rs  constants.rs  deep_research.rs  errors.rs  mod.rs  timeout.rs  utils.rs  wait_for_element.rs
src/web_search/: mod.rs  search.rs
task/: 000-code-review-summary.md  001-race-condition-browser-cleanup.md  002-expand-windows-env-vars-bug.md  003-dead-code-apply-stealth-measures.md  004-dead-code-create-blank-page.md  005-security-browser-flags-production-risk.md  006-resource-leak-cleanup-task.md  007-try-lock-incomplete-operations.md  008-redundant-state-tracking.md  009-complex-type-manager-pattern.md  010-oncecell-caches-initialization-errors.md  011-session-cancel-no-wait.md  012-temp-directory-leak-on-error.md
